--- a/tests/Makefile
+++ b/tests/Makefile
@@ -6,7 +6,7 @@
 #    By: tishigak <tishigak@student.42tokyo.jp>     +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2021/05/09 20:09:50 by tishigak          #+#    #+#              #
-#    Updated: 2021/05/11 18:16:57 by tishigak         ###   ########.fr        #
+#    Updated: 2021/05/12 15:55:28 by tishigak         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -19,10 +19,13 @@ FRAMEWORK_LIB  = ${FRAMEWORK_DIR}/libunit.a
 
 STRLEN_TESTS   = ./strlen/00_launcher.c ./strlen/01_basic_test.c ./strlen/02_ko_test.c \
                 ./strlen/03_segv_test.c ./strlen/04_bus_err_test.c ./strlen/05_empty_test.c\
-								./strlen/06_not_ascii_test.c ./strlen/07_nullbyte_test.c ./strlen/08_numeric_test.c \
-								./strlen/09_nonprintable_test.c ./strlen/10_bigsize_test.c ./strlen/11_timeout_test.c \
-								./strlen/12_abort_test.c ./strlen/13_zero_div_test.c ./strlen/14_one_test.c ./strlen/15_comb_test.c
-ATOI_TESTS     = ./atoi/00_launcher.c ./atoi/01_basic_test.c ./atoi/02_zero_test.c ./atoi/03_minus_test.c ./atoi/04_max_test.c ./atoi/05_min_test.c
+		./strlen/06_not_ascii_test.c ./strlen/07_nullbyte_test.c ./strlen/08_numeric_test.c \
+		./strlen/09_nonprintable_test.c ./strlen/10_bigsize_test.c ./strlen/11_timeout_test.c \
+		./strlen/12_abort_test.c ./strlen/13_zero_div_test.c ./strlen/14_one_test.c ./strlen/15_comb_test.c
+ATOI_TESTS     = ./atoi/00_launcher.c ./atoi/01_basic_test.c ./atoi/02_zero_test.c ./atoi/03_minus_test.c ./atoi/04_max_test.c \
+		./atoi/05_min_test.c ./atoi/06_longmax_test.c ./atoi/07_longmin_test.c ./atoi/08_longover_test.c \
+		./atoi/09_longunder_test.c ./atoi/10_sign_test.c ./atoi/11_atoi_space_test.c ./atoi/12_atoi_comb_test.c \
+		./atoi/13_atoi_notnum_test.c ./atoi/14_atoi_notnum2_test.c ./atoi/15_atoi_empty_test.c
 
 SRCS           = main.c ${STRLEN_TESTS} ${ATOI_TESTS}
 OBJS           = $(SRCS:.c=.o)
