#2 add strnstr test

--- a/tests/Makefile
+++ b/tests/Makefile
@@ -6,7 +6,7 @@
 #    By: tishigak <tishigak@student.42tokyo.jp>     +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2021/05/09 20:09:50 by tishigak          #+#    #+#              #
-#    Updated: 2021/05/12 15:55:28 by tishigak         ###   ########.fr        #
+#    Updated: 2021/05/12 19:51:44 by tishigak         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -26,8 +26,11 @@ ATOI_TESTS     = ./atoi/00_launcher.c ./atoi/01_basic_test.c ./atoi/02_zero_test
 		./atoi/05_min_test.c ./atoi/06_longmax_test.c ./atoi/07_longmin_test.c ./atoi/08_longover_test.c \
 		./atoi/09_longunder_test.c ./atoi/10_sign_test.c ./atoi/11_atoi_space_test.c ./atoi/12_atoi_comb_test.c \
 		./atoi/13_atoi_notnum_test.c ./atoi/14_atoi_notnum2_test.c ./atoi/15_atoi_empty_test.c
+STRNSTR_TESTS  = ./strnstr/00_launcher.c ./strnstr/01_basic1_test.c ./strnstr/02_basic2_test.c ./strnstr/03_basic3_test.c \
+		./strnstr/04_empty1_test.c ./strnstr/05_empty2_test.c ./strnstr/06_not_found1_test.c ./strnstr/07_not_found2_test.c \
+		./strnstr/08_not_segv_test.c ./strnstr/09_not_search_test.c
 
-SRCS           = main.c ${STRLEN_TESTS} ${ATOI_TESTS}
+SRCS           = main.c ${STRLEN_TESTS} ${ATOI_TESTS} ${STRNSTR_TESTS}
 OBJS           = $(SRCS:.c=.o)
 
 all:	$(NAME)
